# mcp-poc-custom-llm

./: client.py  manual_call.py  mcp-poc-custom-llm-master.7z  mcp_client2.py  net_converter.py  pyproject.toml  saple config  server.py  ui.py
